...
                                    }
                                }
                            }
                        }
                    }
                    .padding()
                    .accessibilityIdentifier("feedGrid")

                    ProgressView()
                        .opacity(viewModel.isLoading || viewModel.isFetching ? 1.0 : 0.0)
                }
            }
            .navigationTitle("The Cats")
            .background(Color.gray.opacity(0.2))
        }
        .onAppear {
            viewModel.fetchItems()
        }
        .navigationBarTitleDisplayMode(.large)
...
